feat(vehicle/filter): implement filter endpoint
Vehicles in the database can be filtered via /vehicle/filter endpoint.

This endpoint accepts two query parameters namely `vehicle_types` and
`vehicle_groups`. These paramaetrs accepts comma seperated strings in
them.
